<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_showcase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_showcase" />

    <Button
        android:id="@+id/btn_from_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_from_layout" />

    <Button
        android:id="@+id/btn_from_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_from_code" />

    <Button
        android:id="@+id/btn_styled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_styled" />

    <Button
        android:id="@+id/btn_global_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_global_style" />

    <Button
        android:id="@+id/btn_with_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_with_padding" />

    <Button
        android:id="@+id/btn_custom_fonts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_custom_font" />


</LinearLayout>