<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/long_text_background"
    android:orientation="vertical">

    <com.sergivonavi.materialbanner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonLeftText="@string/banner_btn_left"
        app:buttonRightText="@string/banner_btn_right"
        app:contentPaddingEnd="@dimen/banner_content_padding_end"
        app:contentPaddingStart="@dimen/banner_content_padding_start"
        app:messageText="@string/banner_message" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:text="@string/long_text" />
    </androidx.cardview.widget.CardView>

</LinearLayout>