<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.sergivonavi.materialbanner.Banner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonLeftText="@string/banner_showcase_button"
        app:messageText="@string/banner_showcase_message_1" />

    <com.sergivonavi.materialbanner.Banner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonLeftText="@string/banner_showcase_button"
        app:buttonRightText="@string/banner_showcase_button"
        app:messageText="@string/banner_showcase_message_2" />

    <com.sergivonavi.materialbanner.Banner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_banner_circle_40dp"
        app:buttonLeftText="@string/banner_showcase_button"
        app:buttonRightText="@string/banner_showcase_button"
        app:messageText="@string/banner_showcase_message_2" />

</LinearLayout>